Repositorio preparado para ser desplegado.
